# lighthouse

beacon_node/: Cargo.toml
beacon_node/beacon_chain/src/: beacon_chain.rs  beacon_fork_choice_store.rs  builder.rs  canonical_head.rs  chain_config.rs  fork_revert.rs
beacon_node/beacon_chain/src/schema_change/: migration_schema_v23.rs
beacon_node/src/: cli.rs  config.rs
beacon_node/store/: Cargo.toml
beacon_node/store/src/: errors.rs  hot_cold_store.rs
consensus/fork_choice/: Cargo.toml
consensus/fork_choice/benches/: fcr_benches.rs
consensus/fork_choice/src/: fast_confirmation.rs  fork_choice.rs  fork_choice_store.rs  lib.rs  metrics.rs
consensus/fork_choice/src/monitoring/: Makefile  README.md
consensus/fork_choice/src/monitoring/grafana/dashboards/: fcr-overview.json
consensus/fork_choice/src/monitoring/prometheus/: fcr_rules.yml  prometheus.yml
consensus/fork_choice/src/monitoring/scripts/: start.sh
consensus/fork_choice/tests/: tests.rs
consensus/proto_array/src/: fork_choice_test_definition.rs  proto_array_fork_choice.rs
lighthouse/: Cargo.toml
lighthouse/tests/: beacon_node.rs
