[package]
name = "fork_choice"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
logging = { workspace = true }
metrics = { workspace = true }
proto_array = { workspace = true }
state_processing = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
lru = { workspace = true }
zerocopy = "0.7.35"

[dev-dependencies]
proptest = "1"
beacon_chain = { workspace = true }
store = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }
types = { workspace = true }

[features]
default = []
fcr_bench = []

[[bench]]
name = "fcr_benches"
harness = false
required-features = ["fcr_bench"]